[tool.poetry]
name = "concurrency"
version = "0.1.0"
description = "Examples of Python code implementations executing concurrently and in parallel"
authors = ["Javier Castaño"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "3.8.2"
numpy = "1.26.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
